Fix Safari z-index element above media

--- a/src/core/vlite.css
+++ b/src/core/vlite.css
@@ -100,6 +100,10 @@
 		height: 100%;
 	}
 
+	&-media {
+		position: relative;
+	}
+
 	&-controlButton {
 		position: relative;
 		display: flex;
